--- a/app/src/main/res/layout/activity_view__movie.xml
+++ b/app/src/main/res/layout/activity_view__movie.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.watchlist.View_Movie">
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
+    <TextView
+        android:id="@+id/movie_data"
+        android:layout_width="284dp"
+        android:layout_height="367dp"
+        android:ems="20"
         android:inputType="textMultiLine"
+        android:text="TEST"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="109dp" />
+        tools:layout_editor_absoluteY="109dp"
+        app:layout_constraintHorizontal_bias="0.502" />
 </android.support.constraint.ConstraintLayout>
