--- a/app/src/main/res/layout/activity_view__movie.xml
+++ b/app/src/main/res/layout/activity_view__movie.xml
@@ -7,22 +7,9 @@
     tools:context="com.example.watchlist.View_Movie">
 
     <TextView
-        android:id="@+id/movie_data"
-        android:layout_width="288dp"
-        android:layout_height="83dp"
-        android:ems="20"
-        android:inputType="textMultiLine"
-        android:text="Plot"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.474" />
-
-    <TextView
         android:id="@+id/movie_data_title"
         android:layout_width="288dp"
-        android:layout_height="83dp"
+        android:layout_height="40dp"
         android:ems="20"
         android:inputType="textMultiLine"
         android:text="TITLE"
@@ -30,6 +17,60 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.081" />
+        app:layout_constraintVertical_bias="0.033" />
+
+    <TextView
+        android:id="@+id/movie_data_year"
+        android:layout_width="288dp"
+        android:layout_height="40dp"
+        android:ems="20"
+        android:inputType="textMultiLine"
+        android:text="YEAR"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.118" />
+
+    <TextView
+        android:id="@+id/movie_data_directors"
+        android:layout_width="288dp"
+        android:layout_height="40dp"
+        android:ems="20"
+        android:inputType="textMultiLine"
+        android:text="DIRECTORS"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.203" />
+
+    <TextView
+        android:id="@+id/movie_data_actors"
+        android:layout_width="288dp"
+        android:layout_height="40dp"
+        android:ems="20"
+        android:inputType="textMultiLine"
+        android:text="ACTORS"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.288" />
+
+    <TextView
+        android:id="@+id/movie_data"
+        android:layout_width="288dp"
+        android:layout_height="100dp"
+        android:ems="20"
+        android:inputType="textMultiLine"
+        android:text="Plot"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.428" />
+
+
 
 </android.support.constraint.ConstraintLayout>
