--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,17 @@
 
     <EditText
         android:id="@+id/movie"
-        android:layout_width="221dp"
-        android:layout_height="43dp"
+        android:layout_width="194dp"
+        android:layout_height="0dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Tittle"
-        tools:layout_editor_absoluteY="165dp"
+        tools:layout_editor_absoluteY="160dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="81dp" />
+        android:layout_marginRight="81dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.861" />
 
     <Button
         android:id="@+id/search_button"
@@ -26,6 +29,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias="0.034"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/movie" />
+
+    <Button
+        android:id="@+id/fav_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Favorites"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:onClick="favorites"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_button" />
 </android.support.constraint.ConstraintLayout>
 
