Works! Only checks left

--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.watchlist.favorites">
 
+    <ListView
+        android:id="@+id/fav_list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/transparent"
+        android:cacheColorHint="@android:color/transparent"
+        android:divider="#CCCCCC"
+        android:dividerHeight="1dp"
+        android:paddingLeft="2dp" />
+
 </android.support.constraint.ConstraintLayout>
