--- a/app/src/main/res/layout/activity_view__movie.xml
+++ b/app/src/main/res/layout/activity_view__movie.xml
@@ -83,15 +83,31 @@
 
     <Button
         android:id="@+id/add"
+        android:layout_width="125dp"
+        android:layout_height="41dp"
+        android:text="ADD / REMOVE"
+        android:onClick="saveToSharedPrefs"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/movie_data"
+        app:layout_constraintHorizontal_bias="0.81"
+        app:layout_constraintRight_toLeftOf="@+id/favs"
+        android:layout_marginRight="8dp" />
+
+    <Button
+        android:id="@+id/favs"
         android:layout_width="88dp"
         android:layout_height="42dp"
-        android:text="ADD"
+        android:text="FAVS"
+        android:onClick="favs"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.0"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/movie_data" />
-
+        app:layout_constraintTop_toBottomOf="@+id/movie_data"
+        app:layout_constraintHorizontal_bias="0.719" />
 
 </android.support.constraint.ConstraintLayout>
